bluec-tests/tests/valid/types_general/int64_implicit_conversion.c
int main(void) {
    int a = -9223372036854775808;
    int b = -9223372036854775818;
    int c = -9223372036854775807;

    int x = 444444444444444444;
    int y = -444444444444444444;

    return a == 0 && b == -10 && c == 1 && x == 293717788 && y == -293717788;
}
